--- a/packages/whisper/chart/values.yaml
+++ b/packages/whisper/chart/values.yaml
@@ -73,7 +73,7 @@ persistence:
   storageClass: "local-path"
 
 gpu:
-  runtimeClassName: "###ZARF_VAR_GPU_RUNTIME###"
+  runtimeClassName: ""
 
 modelInjectionContainer:
   securityContext:
