--- a/packages/api/values/upstream-values.yaml
+++ b/packages/api/values/upstream-values.yaml
@@ -1,9 +1,9 @@
 api:
   image:
     repository: ghcr.io/defenseunicorns/leapfrogai/leapfrogai-api
-    tag: ###ZARF_CONST_IMAGE_VERSION###
+    tag: "###ZARF_CONST_IMAGE_VERSION###"
 
-  expose: ###ZARF_VAR_EXPOSE_API###
+  expose: "###ZARF_VAR_EXPOSE_API###"
 
   env:
     - name: LFAI_LOG_LEVEL
@@ -28,9 +28,9 @@ api:
   migration:
     image:
       repository: ghcr.io/defenseunicorns/leapfrogai/api-migrations
-      tag: ###ZARF_CONST_IMAGE_VERSION###
+      tag: "###ZARF_CONST_IMAGE_VERSION###"
 
 kiwigrid:
   image:
     repository: kiwigrid/k8s-sidecar
-    tag: 1.23.3
+    tag: "1.23.3"
