--- a/packages/llama-cpp-python/chart/templates/service.yaml
+++ b/packages/llama-cpp-python/chart/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "chart.fullname" . }}
-  namespace: {{ default "leapfrogai" .Release.Namespace }}
+  namespace: {{ .Release.Namespace | default "leapfrogai" }}
   annotations:
     zarf.dev/connect-description: "{{ .Values.nameOverride }} gRPC endpoint."
   labels:
