--- a/packages/repeater/values/upstream-values.yaml
+++ b/packages/repeater/values/upstream-values.yaml
@@ -1,8 +1,8 @@
 image:
   repository: ghcr.io/defenseunicorns/leapfrogai/repeater
-  tag: ###ZARF_CONST_IMAGE_VERSION###
+  tag: "###ZARF_CONST_IMAGE_VERSION###"
 
 persistence:
-  size: ###ZARF_VAR_PVC_SIZE###
-  accessModes: ###ZARF_VAR_PVC_ACCESS_MODE###
-  storageClass: ###ZARF_VAR_PVC_STORAGE_CLASS###
+  size: "###ZARF_VAR_PVC_SIZE###"
+  accessModes: "###ZARF_VAR_PVC_ACCESS_MODE###"
+  storageClass: "###ZARF_VAR_PVC_STORAGE_CLASS###"
