--- a/packages/ui/chart/templates/ui/permissions.yaml
+++ b/packages/ui/chart/templates/ui/permissions.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "chart.serviceAccountName" . }}
-  namespace: {{ default "leapfrogai" .Release.Namespace }}
+  namespace: {{ .Release.Namespace | default "leapfrogai" }}
   labels:
     {{- include "chart.labels" . | nindent 4 }}
