--- a/packages/ui/chart/templates/ui/service.yaml
+++ b/packages/ui/chart/templates/ui/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "chart.fullname" . }}
-  namespace: {{ default "leapfrogai" .Release.Namespace }}
+  namespace: {{ .Release.Namespace | default "leapfrogai" }}
   annotations:
     app: {{ include "chart.fullname" . }}
     zarf.dev/connect-description: "Load the LeapfrogAI UI"
@@ -23,6 +23,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "chart.serviceAccountName" . }}
-  namespace: {{ default "leapfrogai" .Release.Namespace }}
+  namespace: {{ .Release.Namespace | default "leapfrogai" }}
   labels:
     {{- include "chart.labels" . | nindent 4 }}
