--- a/packages/llama-cpp-python/values/upstream-values.yaml
+++ b/packages/llama-cpp-python/values/upstream-values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: ghcr.io/defenseunicorns/leapfrogai/llama-cpp-python
+  repository: "ghcr.io/defenseunicorns/leapfrogai/llama-cpp-python"
   tag: "###ZARF_CONST_IMAGE_VERSION###"
 
 persistence:
