--- a/packages/text-embeddings/values/upstream-values.yaml
+++ b/packages/text-embeddings/values/upstream-values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: ghcr.io/defenseunicorns/leapfrogai/text-embeddings
+  repository: "ghcr.io/defenseunicorns/leapfrogai/text-embeddings"
   tag: "###ZARF_CONST_IMAGE_VERSION###"
 
 gpu:
