--- a/packages/ui/values/upstream-values.yaml
+++ b/packages/ui/values/upstream-values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: ghcr.io/defenseunicorns/leapfrogai/leapfrogai-ui
+  repository: "ghcr.io/defenseunicorns/leapfrogai/leapfrogai-ui"
   tag: "###ZARF_CONST_IMAGE_VERSION###"
 
 env:
