--- a/packages/whisper/chart/values.yaml
+++ b/packages/whisper/chart/values.yaml
@@ -3,14 +3,14 @@
 # Declare variables to be passed into your templates.
 
 image:
-  repository: ghcr.io/defenseunicorns/leapfrogai/whisper
+  repository: "ghcr.io/defenseunicorns/leapfrogai/whisper"
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   # x-release-please-start-version
-  tag: 0.11.0
+  tag: "0.11.0"
   # x-release-please-end
 
-nameOverride: whisper
+nameOverride: "whisper"
 fullnameOverride: ""
 
 env:
