--- a/packages/whisper/values/upstream-values.yaml
+++ b/packages/whisper/values/upstream-values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: ghcr.io/defenseunicorns/leapfrogai/whisper
+  repository: "ghcr.io/defenseunicorns/leapfrogai/whisper"
   tag: "###ZARF_CONST_IMAGE_VERSION###"
 
 gpu:
