--- a/bundles/dev/cpu/uds-bundle.yaml
+++ b/bundles/dev/cpu/uds-bundle.yaml
@@ -22,17 +22,17 @@ packages:
     path: ../../../packages/llama-cpp-python/
     ref: dev
 
-#  # Text Embeddings Model
-#  - name: text-embeddings
-#    path: ../../../packages/text-embeddings/
-#    ref: dev
-#
-#  # Transcription Model
-#  - name: whisper
-#    path: ../../../packages/whisper/
-#    ref: dev
+  # Text Embeddings Model
+  - name: text-embeddings
+    path: ../../../packages/text-embeddings/
+    ref: dev
+
+  # Transcription Model
+  - name: whisper
+    path: ../../../packages/whisper/
+    ref: dev
 
   # UI
   - name: leapfrogai-ui
     path: ../../../packages/ui/
-    ref: registry1
+    ref: dev
