--- a/packages/whisper/chart/templates/deployment.yaml
+++ b/packages/whisper/chart/templates/deployment.yaml
@@ -24,10 +24,15 @@ spec:
         app: lfai-{{ .Values.nameOverride }}
         {{- include "chart.selectorLabels" . | nindent 8 }}
     spec:
-      {{- if gt (index .Values.resources.limits "nvidia.com/gpu") 0.0 }}
-      runtimeClassName: nvidia
+      # handle the case where limit is a number or a string, else comparison fails on helm install
+      {{- $gpuLimit := index .Values.resources.limits "nvidia.com/gpu" }}
+      {{- if kindIs "string" $gpuLimit }}
+        {{- $gpuLimit = $gpuLimit | float64 }}
+      {{- end }}
+      {{- if gt $gpuLimit 0.0 }}
+        runtimeClassName: nvidia
       {{- else if .Values.gpu.runtimeClassName }}
-      runtimeClassName: {{ .Values.gpu.runtimeClassName }}
+        runtimeClassName: {{ .Values.gpu.runtimeClassName }}
       {{- end }}
       # It's necessary to include the ###ZARF_DATA_INJECTION_MARKER### somewhere in the podspec, otherwise data injections will not occur.
       initContainers:
