--- a/.github/workflows/e2e-registry1-weekly.yaml
+++ b/.github/workflows/e2e-registry1-weekly.yaml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
           # x-release-please-start-version
-          ref: "0.11.0"
+          ref: "v0.11.0"
           # x-release-please-end
 
       - name: Setup Python
