--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -59,11 +59,6 @@ components:
     only:
       flavor: upstream
     charts:
-      # This exists because the jwt token job fails to run in the main helm chart at the proper time due to its reliance on `helm.sh/hook: post-install`.
-      # This annotation causes it to run at the end of the Supabase Zarf component.
-      # Because of this the job never starts. As parts of Supabase rely on this token being created before moving on.
-      # When attempts are made to move it earlier in the process within the same component the job does not complete due to pre-requisites that the job has.
-      # So all of this has been moved into the bootstrap values file and component.
       - name: supabase
         namespace: leapfrogai
         url: https://github.com/supabase-community/supabase-kubernetes.git
@@ -87,3 +82,28 @@ components:
       - docker.io/darthsim/imgproxy:v3.8.0
       - docker.io/timberio/vector:0.34.0-alpine
       - localhost:5000/test/custom-supabase-vector:0.0.1
+
+  - name: supabase-migrations
+    description: "Migrations that operate on a database configuration level that require higher elevated permissions (ie adding extensions)"
+    required: true
+    only:
+      flavor: upstream
+    charts:
+      - name: supabase-migrations
+        namespace: leapfrogai
+        localPath: migrationChart/
+        releaseName: supabase-migrations
+        version: 0.0.1
+        valuesFiles:
+          - "migration-values.yaml"
+    images:
+      - "ghcr.io/defenseunicorns/leapfrogai/supabase-migrations:###ZARF_PKG_TMPL_IMAGE_VERSION###"
+    actions:
+      onDeploy:
+        after:
+          - wait:
+              cluster:
+                kind: Job
+                name: supabase-migrations-###ZARF_PKG_TMPL_IMAGE_VERSION###
+                namespace: leapfrogai
+                condition: complete
