--- a/packages/ui/chart/templates/ui/migration-job.yaml
+++ b/packages/ui/chart/templates/ui/migration-job.yaml
@@ -12,8 +12,8 @@ spec:
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: supabase-postgresql
-                  key: postgres-password
+                  name: supabase-db
+                  key: password
             - name: MIGRATION_NAMESPACE
               value: "{{ .Values.migration.namespace }}"
             - name: MIGRATION_SERVICE_NAME
