--- a/packages/ui/chart/ui-values.yaml
+++ b/packages/ui/chart/ui-values.yaml
@@ -19,5 +19,5 @@ package:
 
 migration:
   namespace: "leapfrogai"
-  serviceName: "supabase-supabase-db"
+  serviceName: "supabase-db"
   servicePort: "5432"
