--- a/.github/workflows/pytest-shim.yaml
+++ b/.github/workflows/pytest-shim.yaml
@@ -42,9 +42,15 @@ concurrency:
   group: pytest-skip-${{ github.ref }}
   cancel-in-progress: true
 
-
 jobs:
   pytest:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Skipped
+        run: |
+          echo skipped
+
+  integration:
     runs-on: ubuntu-latest
     steps:
       - name: Skipped
